# Himalaya

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  ChangeLog.md  H3cc.kdev4  README  README.md  TODO.md  conanfile.txt
.github/workflows/: coverage.yml  test.yml
cmake/: FindHimalaya.cmake  himalaya.pc.in
doc/: CMakeLists.txt  Doxyfile.in  himalaya.conf
doc/html/: HierarchyCalculator_8hpp_source.html  HierarchyObject_8hpp_source.html  Himalaya__interface_8hpp_source.html  annotated.html  classes.html  classhimalaya_1_1HierarchyCalculator-members.html  classhimalaya_1_1HierarchyCalculator.html  classhimalaya_1_1HierarchyObject-members.html  classhimalaya_1_1HierarchyObject.html  dir_830993bcd1509ef5c0c5d40ab06ee418.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_e5fee4c054193462e86807eb3f9d1998.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  structhimalaya_1_1Parameters-members.html  structhimalaya_1_1Parameters.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
doc/latex/: annotated.tex  classhimalaya_1_1HierarchyCalculator.tex  classhimalaya_1_1HierarchyObject.tex  dir_830993bcd1509ef5c0c5d40ab06ee418.tex  dir_8ee1a5e78eaec319fe5d64075812fc61.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_e5fee4c054193462e86807eb3f9d1998.tex  refman.tex  structhimalaya_1_1Parameters.tex
examples/: example.m
include/himalaya/: HierarchyCalculator.hpp  HierarchyObject.hpp  Himalaya_interface.hpp  version.hpp
source/: HierarchyCalculator.cpp  HierarchyObject.cpp  HimalayaFlags.hpp  Himalaya_interface.cpp  example.cpp  example.m  main.cpp
source/LibraryLink/: Himalaya_LibraryLink.cpp  Himalaya_LibraryLink.m
source/hierarchies/: H3.cpp  H3.hpp  H32q2g.cpp  H32q2g.hpp  H3q22g.cpp  H3q22g.hpp  H4.cpp  H4.hpp  H5.cpp  H5.hpp  H5g1.cpp  H5g1.hpp  H6.cpp  H6.hpp  H6b.cpp  H6b.hpp  H6b2qg2.cpp  H6b2qg2.hpp  H6bq22g.cpp  H6bq22g.hpp  H6bq2g2.cpp  H6bq2g2.hpp  H6g2.cpp  H6g2.hpp  H9.cpp  H9.hpp  H9q2.cpp  H9q2.hpp  Hierarchies.hpp  HierarchyCalculator.cpp  HierarchyCalculator.cpp~  HierarchyFlags.hpp  HierarchyObject.cpp  HierarchyTypes.hpp  Himalaya_interface.cpp
source/himalaya/: HierarchyCalculator.cpp  HierarchyObject.cpp  Himalaya_interface.cpp
source/himalaya/LibraryLink/: Himalaya_LibraryLink.cpp  Himalaya_LibraryLink.m
source/himalaya/hierarchies/: H3.cpp  H3.hpp  H32q2g.cpp  H32q2g.hpp  H3q22g.cpp  H3q22g.hpp  H4.cpp  H4.hpp  H5.cpp  H5.hpp  H5g1.cpp  H5g1.hpp  H6.cpp  H6.hpp  H6b.cpp  H6b.hpp  H6b2qg2.cpp  H6b2qg2.hpp  H6bq22g.cpp  H6bq22g.hpp  H6bq2g2.cpp  H6bq2g2.hpp  H6g2.cpp  H6g2.hpp  H9.cpp  H9.hpp  H9q2.cpp  H9q2.hpp  Hierarchies.hpp  HierarchyTypes.hpp
source/himalaya/mh2_eft/: Mh2EFTCalculator.cpp  Mh2EFTCalculator.hpp  ThresholdCalculator.cpp  ThresholdCalculator.hpp  ThresholdLoopFunctions.cpp  ThresholdLoopFunctions.hpp  threshold_loop_functions.cpp
source/himalaya/mh2_fo/: Linalg.cpp  MSSM_mass_eigenstates.cpp  MSSM_mass_eigenstates.hpp  MSSM_spectrum.cpp  MSSM_spectrum.hpp  PV.cpp  PV.hpp  Sum.hpp  pv.cpp  pv.hpp
source/himalaya/mh2l/: DSZHiggs.cpp  DSZHiggs.f  DSZHiggs.h  DSZHiggs.hpp  Li2.f90  Li2f.cpp  Li2f.f90
source/himalaya/misc/: CouplingOrders.hpp  Li2.cpp  Li2.hpp  Logger.hpp  Numerics.hpp  Powers.hpp  RAII.hpp
source/include/: H3m_interface.hpp  Hierarchies.hpp  HierarchyCalculator.hpp  HierarchyObject.hpp  Himalaya_interface.hpp  Logger.hpp  ThresholdCalculator.hpp  version.hpp.in
source/include/hierarchies/: Constants.hpp  H3.hpp  H32q2g.hpp  H3q22g.hpp  H4.hpp  H5.hpp  H5g1.hpp  H6.hpp  H6b.hpp  H6b2qg2.hpp  H6bq22g.hpp  H6bq2g2.hpp  H6g2.hpp  H9.hpp  H9q2.hpp  Hierarchies.hpp  HierarchyCalculator.hpp  HierarchyObject.hpp  Types.hpp  Utils.hpp  change.pl  change.pl~  enums.hpp  operators.hpp  test.t  types.hpp
source/include/hierarchies/h3/: sigS12Full.inc  sigS1Full.inc  sigS2Full.inc
source/include/hierarchies/h32q2g/: sigS12Full.inc  sigS1Full.inc  sigS2Full.inc
source/include/hierarchies/h3q22g/: sigS12Full.inc  sigS1Full.inc  sigS2Full.inc
source/include/hierarchies/h4/: sigS12Full.inc  sigS1Full.inc  sigS2Full.inc
source/include/himalaya/: HierarchyCalculator.hpp  version.hpp
source/include/mh1l/: MSSM_mass_eigenstates.hpp  pv.hpp  sum.hpp
source/include/mh2_eft/: EFTFlags.hpp  Flags.hpp  Mh2EFTCalculator.hpp  ThresholdCalculator.hpp  threshold_loop_functions.hpp
source/include/mh2_fo/: Linalg.hpp  MSSM_mass_eigenstates.hpp  linalg2.hpp  pv.hpp  sum.hpp
source/include/mh2l/: DSZHiggs.f~  DSZHiggs.h  DSZHiggs.hpp  li2.hpp
source/include/misc/: complex.hpp  dilog.h  dilog.hpp
source/mh1l/: MSSM_mass_eigenstates.cpp  pv.cpp
source/mh2_eft/: #Mh2EFTCalculator.cpp#  EFTFlags.hpp  Flags.hpp  Mh2EFTCalculator.cpp  Mh2EFTCalculator.hpp  ThresholdCalculator.cpp  ThresholdCalculator.hpp  power.hpp  threshold_loop_functions.cpp  threshold_loop_functions.hpp
source/mh2_fo/: Linalg.cpp  Linalg.hpp  MSSM_mass_eigenstates.cpp  MSSM_mass_eigenstates.hpp  linalg2.cpp  pv.cpp  sum.hpp
source/mh2l/: DSZHiggs.cpp  DSZHiggs.f  DSZHiggs.hpp  Li2f.cpp  Li2f.f90  functs.f  li2.cpp
source/misc/: Constants.hpp  CouplingOrders.hpp  Li2.cpp  Li2.hpp  dilog.cpp
test/: CMakeLists.txt  stopwatch.hpp  test_EFT_expressions.cpp  test_FO_expressions.cpp  test_FO_vs_EFT_expressions.cpp  test_Himalaya_interface.cpp  test_LibraryLink.m  test_Numerics.cpp  test_PV.cpp  test_ThresholdLoopFunctions.cpp  test_benchmark.cpp  test_delta_lambda.cpp  test_example.cpp  test_lambda_limits.cpp  test_lambda_normalization.cpp  test_li2.cpp  test_points.cpp  test_points.txt
test/data/: F1.txt  F2.txt  F3.txt  F4.txt  F5.txt  F6.txt  F7.txt  F8.txt  F9.txt  f1_.txt  f2_.txt  f3_.txt  f4_.txt  f5_.txt  f6_.txt  f7_.txt  f8_.txt  generate.m  generate_B0.m  generate_data.m
(+30 files in other folders)
